--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ee691">  <td>24/05/02 12:49:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.amconfig()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&lt;&lt;amconfig</td> 
+<tr bgcolor="8ee691">  <td>24/05/02 16:32:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.amconfig()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&lt;&lt;amconfig</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8ee691">  <td>24/05/02 12:49:29</td>   <td>10368</td> <td title="&lt;&lt;Baseclass.asconfig()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&lt;&lt;asconfig</td> 
+<tr bgcolor="8ee691">  <td>24/05/02 16:32:41</td>   <td>5430</td> <td title="&lt;&lt;Baseclass.asconfig()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&lt;&lt;asconfig</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8ee691">  <td>24/05/02 12:49:09</td>   <td>-10098</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.bcconfig()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&gt;&gt;bcconfig</td> 
+<tr bgcolor="8ee691">  <td>24/05/02 16:32:28</td>   <td>-7857</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.bcconfig()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&gt;&gt;bcconfig</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8ee691">  <td>24/05/02 12:49:15</td>   <td>-3851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.bmconfig()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&gt;&gt;bmconfig</td> 
+<tr bgcolor="8ee691">  <td>24/05/02 16:32:32</td>   <td>-3589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.bmconfig()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&gt;&gt;bmconfig</td> 
 <td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8ee691">  <td>24/05/02 12:49:09</td>   <td>-10130</td> <td title="&gt;&gt;Baseclass.bsconfig()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&gt;&gt;bsconfig</td> 
+<tr bgcolor="8ee691">  <td>24/05/02 16:32:28</td>   <td>-7887</td> <td title="&gt;&gt;Baseclass.bsconfig()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&gt;&gt;bsconfig</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="8ee691">  <td>24/05/02 12:49:29</td>   <td>10279</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.teardown()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="688e88">  <td>24/05/02 12:49:19</td>   <td>-33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.verifyTitlke()[pri:0, instance:Actualtc.VerifyTitle@59309333]">verifyTitlke</td> 
+<tr bgcolor="8ee691">  <td>24/05/02 16:32:40</td>   <td>3892</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.teardown()[pri:0, instance:Actualtc.VerifyTitle@59309333]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="688e88">  <td>24/05/02 16:32:36</td>   <td>-32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.verifyTitle()[pri:0, instance:Actualtc.VerifyTitle@59309333]">verifyTitle</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
